<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    tools:context=".ui.activity.AstrologerListActivity">

        <include
            android:id="@+id/layoutToolbar"
            layout="@layout/toolbar" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:background="@drawable/button_corner"
            android:queryHint="Search Here"
            app:iconifiedByDefault="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_40dp"
            android:layout_margin="@dimen/dimen_5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/short_back_ground"
                android:layout_marginEnd="@dimen/dimen_2dp"
                android:gravity="center_vertical"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/sort_by"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinnerPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/dimen_2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/button_corner"
                android:text="Price"
                android:contentDescription="@string/spinner_price"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinnerRating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/dimen_2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:contentDescription="@string/spinner_rating"
                android:background="@drawable/button_corner"
                android:text="Rating"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinnerExperience"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/dimen_2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:contentDescription="@string/spinner_experience"
                android:background="@drawable/button_corner"
                android:text="@string/experience"
                android:textColor="@color/white" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/scrollDownUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llLoadAstrologerList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/loadAstrologerList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>

                </LinearLayout>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieProgressBar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading"
                app:lottie_speed="2" />

            <include
                android:id="@+id/noData"
                layout="@layout/no_record_layout"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>