<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ReferCodeVerificationActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/llPageLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@drawable/custom_background">

                <ImageView
                    android:id="@+id/right_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_done_one" />

                <TextView
                    android:id="@+id/success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/right_image"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/successful"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/success"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="7dp"
                    android:text="@string/verified"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:elevation="7dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/refferal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/refferal"
                        android:textColor="@color/dark_blue"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/receive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receive" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/code" />

                    <EditText
                        android:id="@+id/editReferAndEarn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/dimen_5dp"
                        android:background="@drawable/button_corner"
                        android:padding="@dimen/dimen_15dp" />

                    <!--            <RelativeLayout-->
                    <!--                android:layout_width="match_parent"-->
                    <!--                android:layout_height="45dp"-->
                    <!--                android:layout_marginTop="7dp"-->
                    <!--                android:background="@drawable/custom_radius">-->

                    <!--                <TextView-->
                    <!--                    android:id="@+id/verify_text"-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:layout_alignParentRight="true"-->
                    <!--                    android:layout_centerVertical="true"-->
                    <!--                    android:layout_marginRight="38dp"-->
                    <!--                    android:text="VERIFIED"-->
                    <!--                    android:textColor="@color/green" />-->

                    <!--                <ImageView-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:layout_alignParentRight="true"-->
                    <!--                    android:layout_centerVertical="true"-->
                    <!--                    android:layout_marginRight="15dp"-->
                    <!--                    android:src="@drawable/check_image" />-->

                    <!--            </RelativeLayout>-->

                    <Button
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/buttonbackground"
                        android:text="sign  Up"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:padding="20dp"
                android:text="Skip"
                android:textSize="16dp" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieProgressBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            app:lottie_speed="2" />
    </FrameLayout>




</LinearLayout>